<!--
  Copyright 2011 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textSize="32dp"
        android:textStyle="bold"
        android:typeface="serif" >
    </TextView>

    <View
        android:id="@+id/dashboardline"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="#646464" >
    </View>



    <ger.geosoft.dashboard.DashboardLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dp" >

        <Button
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_login"
            android:onClick="startAutoMeasure"
            android:text="@string/dashboard_automeasure"
            />

        <Button
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_login"
            android:onClick="startManMeasure"
            android:text="@string/dashboard_manumeasure" />

        <Button
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_login"
            android:onClick="startViewer"
            android:text="@string/dashboard_viewmeasurements" />

        <Button
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_login"
            android:onClick="startLogin"
            android:text="@string/dashboard_login" />

        <Button
            android:id="@+id/login_logout_button"
            style="@style/DashboardButton"
            android:onClick="startSettings"
            android:drawableTop="@drawable/dashboard_login"
            android:text="@string/dashboard_settings" />

    </ger.geosoft.dashboard.DashboardLayout>

</LinearLayout>


<!-- <?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textSize="32dp"
        android:textStyle="bold"
        android:typeface="serif" >
    </TextView>

    <View
        android:id="@+id/dashboardline"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_below="@id/dashboardTitle"
        android:layout_marginTop="4dp"
        android:background="#646464" >
    </View>

    <View
        android:id="@+id/dashboardline2"
        android:layout_width="160dp"
        android:layout_height="1dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/dashboardline"
        android:layout_marginTop="4dp"
        android:background="#646464" >
    </View>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dashboardline2" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:layout_width="64dp"
                    android:layout_height="64dp" >
                </Button>

                <Button
                    android:layout_width="64dp"
                    android:layout_height="64dp" >
                </Button>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:layout_width="64dp"
                    android:layout_height="64dp" >
                </Button>

                <Button
                    android:layout_width="64dp"
                    android:layout_height="64dp" >
                </Button>
            </LinearLayout>            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:layout_width="64dp"
                    android:layout_height="64dp" >
                </Button>

                <Button
                    android:layout_width="64dp"
                    android:layout_height="64dp" >
                </Button>
            </LinearLayout>            
        </TableRow>
    </TableLayout>

</RelativeLayout>-->